--- a/blog.html
+++ b/blog.html
@@ -11,10 +11,10 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <a href="home.html" class="nav-logo">UjwalUSA</a>
+            <a href="index.html" class="nav-logo">UjwalUSA</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="home.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="" class="nav-link">Blog</a>
